--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,20 +1,33 @@
-            - name: Deploy to Firebase Hosting
-  # You may pin to the exact commit or the version.
-  # uses: FirebaseExtended/action-hosting-deploy@276388dd6c2cde23455b30293105cc866c22282d
-  uses: FirebaseExtended/action-hosting-deploy@v0.6-alpha
-  with:
-    # The GITHUB_TOKEN secret
-    repoToken: # optional
-    # Firebase service account JSON
-    firebaseServiceAccount: 
-    # How long should a preview live? See the preview channels docs for options
-    expires: # optional, default is 7d
-    # The project to deploy to. If you leave this blank, make sure you check in a .firebaserc file
-    projectId: # optional
-    # The ID of the channel to deploy to. If you leave this blank, a preview channel and its ID will be auto-generated per branch or PR.
-    channelId: # optional
-    # The target name of the Hosting site to deploy to. If you leave this blank, the default target or all targets defined in the .firebaserc will be deployed to. Refer to the Hosting docs about [multiple sites](https://firebase.google.com/docs/hosting/multisites) for more information about deploy targets.
-    target: # optional
-    # The location of your firebase.json file, relative to the root of your directory
-    entryPoint: # optional, default is .
-          
+name: Deploy to Firebase
+
+on:
+  push:
+    branches:
+      - main # Change this to your main branch name if different
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Or your preferred Node.js version
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build Project
+        run: cd docs && npm run build
+
+      - name: Deploy to Firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
+          channelId: live
+          projectId: clockworksproduction # replace with your firebase project id
+          entryPoint: docs
